lab/alb-controller/lab-1/hello-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-app-pod
  labels:
    app: hello
spec:
  containers:
    - name: hello-container
      image: dbgurum/ingress:hi
      args:
        - "-text=Hello, Fastcampus."
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-svc
  labels:
    app: hello
spec:
  selector:
    app: hello
  ports:
    - port: 5678
      targetPort: 5678
      protocol: TCP
