lab/alb-controller/lab-1/hello-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-hello
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /hello-app
        pathType: Prefix
        backend:
          service:
            name: hello-app-svc
            port:
              number: 5678
